[package]
name = "gameboy"
version = "0.1.0"
authors = ["Amey Kusurkar <amey1000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# minifb = "0.15.3"
clap = "2.33.0"
wasm-bindgen = "0.2.63"
# pge = { path = "/Users/ameykusurkar/rustyPixelGameEngine" }
wee_alloc = { version = "0.4.5", optional = true }
console_error_panic_hook = "0.1.6"

# [dependencies.sdl2]
# version = "0.34.0"
# features = ["gfx"]
