[package]
name = "gameboy"
version = "0.1.0"
authors = ["Amey Kusurkar <amey1000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.15.3"
clap = "2.33.0"
pge = { git = "https://github.com/mattbettcher/rustyPixelGameEngine", branch = "v1" }
gameboy-core = { path = "core" }

[dependencies.sdl2]
version = "0.34.0"
features = ["gfx"]
