[package]
name = "gameboy-wasm"
version = "0.1.0"
authors = ["Amey Kusurkar <amey1000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
gameboy-core = { path = "../core" }
wasm-bindgen = "0.2.88"
wee_alloc = { version = "0.4.5", optional = true }
console_error_panic_hook = "0.1.6"
